# perf-test

./: .gitignore  .gitmodules  CMakeLists.txt  FLOPanalyzer.c  FLOPanalyzer.h  MEManalyzer.c  Makefile  ManualMake.mk  PSWCL_MINIPROJECT_PHASE-I_SYNOPSIS.docx  README.md  a.out  cmake_install.cmake  fadd.c  fadd.h  fmul.c  install.sh  linuxmake.mk  main.c  perftest  perftool  test
compiled/: Makefile  cmake_install.cmake
compileddb/: Makefile  cmake_install.cmake
compiledfloat/: Makefile  cmake_install.cmake
files/: PSWCL_MINIPROJECT_PHASE-I_SYNOPSIS.docx  dbstructure  mongodocformat.txt
src/: FLOPanalyzer.c  FLOPanalyzer.h  Makefile  database.c  main.c
src/MemTest/: MemTest.c  a.out
src/SimpleDB/: simpledb.c  simpledb.h
src/floatfuncs/: FLOPanalyzer.c  FLOPanalyzer.h  fadd.c  fdiv.c  fdiv.h  fmul.c  fmul.h  fsub.c  fsub.h  research.c  research.h
